썸네일 클릭시 영상 띄우기

--- a/src/component/video_item/video_item.module.css
+++ b/src/component/video_item/video_item.module.css
@@ -1,6 +1,13 @@
 .containner {
-  width: 50%;
   padding: 0.2em;
+}
+
+.containner.grid {
+  width: 50%;
+}
+
+.containner.list {
+  width: 100%;
 }
 
 .video {
